Add some colors and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Kotlin000</string>
+    <string name="app_name">Android Programming in Kotlin</string>
+    <string name="trrrt">Hello Universe</string>
 </resources>
